--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/bulma": "^1.2.0",
     "cross-env": "^5.2.0",
+    "firebase": "^5.5.8",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
