--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/bulma": "^1.2.0",
+    "cleave.js": "^1.4.7",
     "cross-env": "^5.2.0",
     "firebase": "^5.5.8",
     "nuxt": "^2.0.0"
