--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cleave.js": "^1.4.7",
     "cross-env": "^5.2.0",
     "firebase": "^5.5.8",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vue-multiselect": "^2.1.3"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
