--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cleave.js": "^1.4.7",
     "cross-env": "^5.2.0",
     "firebase": "^5.5.8",
+    "lodash": "^4.17.11",
     "nuxt": "^2.0.0",
     "vue-multiselect": "^2.1.3"
   },
