--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "vue-multiselect": "^2.1.3"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "@nuxtjs/style-resources": "^0.1.2",
+    "node-sass": "^4.11.0",
+    "nodemon": "^1.11.0",
+    "sass-loader": "^7.1.0"
   }
 }
