--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "nuxt": "^2.0.0",
+    "vee-validate": "^2.1.7",
     "vue-multiselect": "^2.1.3"
   },
   "devDependencies": {
