--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/auth": "^4.5.3",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/bulma": "^1.2.0",
+    "@nuxtjs/pwa": "^3.0.0-beta.8",
     "cleave.js": "^1.4.7",
     "cross-env": "^5.2.0",
     "firebase": "^5.5.8",
