--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "fuzzy": "^0.1.3",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
+    "materialize-css": "^1.0.0-rc.2",
     "nuxt": "^2.0.0",
     "vee-validate": "^2.1.7",
-    "vue-multiselect": "^2.1.3"
+    "vue-multiselect": "^2.1.3",
+    "vue-paginate": "^3.6.0"
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "^0.1.2",
