--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/pwa": "^3.0.0-beta.8",
     "cleave.js": "^1.4.7",
     "cross-env": "^5.2.0",
+    "faker": "^4.1.0",
     "firebase": "^5.5.8",
     "fuse.js": "^3.4.2",
     "fuzzy": "^0.1.3",
@@ -25,6 +26,7 @@
     "materialize-css": "^1.0.0-rc.2",
     "nuxt": "^2.0.0",
     "vee-validate": "^2.1.7",
+    "vue-form-wizard": "^0.8.4",
     "vue-multiselect": "^2.1.3",
     "vue-paginate": "^3.6.0"
   },
