--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "lodash": "^4.17.11",
     "materialize-css": "^1.0.0-rc.2",
     "nuxt": "^2.0.0",
+    "pug": "^2.0.3",
+    "pug-plain-loader": "^1.0.0",
     "vee-validate": "^2.1.7",
     "vue-form-wizard": "^0.8.4",
     "vue-multiselect": "^2.1.3",
